# FAR-AWAY-ZUPP-Hackathon

./: README.md
athena-ai/: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
athena-ai/backend/: pyproject.toml
athena-ai/backend/alembic/: env.py
athena-ai/backend/alembic/versions/: 20250608_0001_initial_schema.py  20250608_0002_auth_tables.py
athena-ai/backend/app/: __init__.py  main.py
athena-ai/backend/app/api/: auth.py  deps.py  health.py
athena-ai/backend/app/core/: settings.py
athena-ai/backend/app/db/: __init__.py  base.py  mixins.py  session.py
athena-ai/backend/app/models/: __init__.py  audit_log.py  decision.py  enums.py  event.py  investigation.py  prediction.py  recommendation.py  refresh_token.py  report.py  user.py
athena-ai/backend/app/repositories/: __init__.py  audit_log_repository.py  base.py  decision_repository.py  event_repository.py  investigation_repository.py  prediction_repository.py  recommendation_repository.py  refresh_token_repository.py  report_repository.py  user_repository.py
athena-ai/backend/app/schemas/: __init__.py  auth.py
athena-ai/backend/app/services/: __init__.py  auth_service.py  token_service.py
athena-ai/backend/tests/: conftest.py  test_auth.py  test_database.py  test_db_health.py  test_health.py
athena-ai/docs/: ARCHITECTURE.md  AUTH_FLOW.md  DATABASE_ARCHITECTURE.md  ER_DIAGRAM.md  ROADMAP.md  SECURITY.md
athena-ai/frontend/: package-lock.json  package.json  tailwind.config.ts
athena-ai/frontend/athena-ai-dashboard-main/: .gitignore  vite.config.ts
(+13 files in other folders)
